# nicovideo.py

./: .gitignore  CONTRIBUTING.md  README.md  build-doc.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build-docs.yml  publish-pypi.yml
docs/: index.md  nicovideo.md
examples/: get_user_uploaded.py
nicovideo/: __init__.py  user.py  video.py
