[tool.poetry]
name = "nicovideo-py"
version = "0.1.0"
description = ""
authors = ["okaits7534 <okaits@okaits7534.net>"]
readme = "README.md"
packages = [{include = "nicovideo"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.7.4"
json5 = "0.9.25"
bs4 = "0.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "3.2.3"
mypy = "1.10.0"
types-beautifulsoup4 = "4.12.0.20240511"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-markdown-builder = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
